# BITCORN

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  libbitcornconsensus.pc.in  libbitgreenconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: lint_06_script.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build_msvc/: README.md  bitcorn.sln  bitgreen_config.h  libsecp256k1_config.h  msvc-autogen.py
contrib/: README.md  bitcorn-cli.bash-completion  bitcorn-tx.bash-completion  bitcornd.bash-completion  bitgreen-cli.bash-completion  bitgreen-qt.pro  bitgreen-tx.bash-completion  bitgreend.bash-completion  install_db4.sh  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  REST-interface.md  developer-notes.md  init.md
doc/man/: Makefile.am  bitcorn-cli.1  bitcorn-qt.1  bitcornd.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  bitcorn-cli-res.rc  bitcorn-cli.cpp  bitcorn-tx-res.rc  bitcorn-tx.cpp  bitcornd.cpp  bitgreen-cli-res.rc  bitgreen-cli.cpp  bitgreen-tx-res.rc  bitgreen-tx.cpp  bitgreen-wallet-res.rc  bitgreen-wallet.cpp  bitgreend-res.rc  bitgreend.cpp  blockencodings.h  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  checkqueue.h  (+81 more)
(+627 files in other folders)
